optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_6.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
export const sym1 = $((ctx) => console.log("1"));

============================= test.tsx ==

import { qrl } from "@qwik.dev/core";
const i_YcWWmS5BN0c = ()=>import("./test.tsx_sym1_YcWWmS5BN0c");
export const sym1 = /*#__PURE__*/ qrl(i_YcWWmS5BN0c, "sym1_YcWWmS5BN0c");


None
============================= test.tsx_sym1_YcWWmS5BN0c.tsx (ENTRY POINT)==

export const sym1_YcWWmS5BN0c = (ctx)=>console.log("1");


None
/*
{
  "origin": "test.tsx",
  "name": "sym1_YcWWmS5BN0c",
  "entry": null,
  "displayName": "test.tsx_sym1",
  "hash": "YcWWmS5BN0c",
  "canonicalFilename": "test.tsx_sym1_YcWWmS5BN0c",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    70,
    95
  ]
}
*/
== DIAGNOSTICS ==

[]
