optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_8.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const Header = component$(() => {
	return $((hola) => {
		const hola = this;
		const {something, styff} = hola;
		const hello = hola.nothere.stuff[global];
		return (
			<Header/>
		);
	});
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_De6Y0mKok3o = ()=>import("./test.tsx_test.tsx_Header_component_1_De6Y0mKok3o");
const i_Qw9nV3mG0KQ = ()=>import("./test.tsx_test.tsx_Header_component_Qw9nV3mG0KQ");
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_Qw9nV3mG0KQ, "test.tsx_Header_component_Qw9nV3mG0KQ"));


None
============================= test.tsx_test.tsx_Header_component_1_De6Y0mKok3o.tsx (ENTRY POINT)==

import { Header } from "./test";
export const test.tsx_Header_component_1_De6Y0mKok3o = (hola)=>{
	const hola = this;
	const { something, styff } = hola;
	const hello = hola.nothere.stuff[global];
	return <Header />;
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Header_component_1_De6Y0mKok3o",
  "entry": null,
  "displayName": "test.tsx_Header_component_1",
  "hash": "De6Y0mKok3o",
  "canonicalFilename": "test.tsx_test.tsx_Header_component_1_De6Y0mKok3o",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    100,
    243
  ]
}
*/
============================= test.tsx_test.tsx_Header_component_Qw9nV3mG0KQ.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const test.tsx_Header_component_Qw9nV3mG0KQ = ()=>{
	return /*#__PURE__*/ qrl(i_De6Y0mKok3o, "test.tsx_Header_component_1_De6Y0mKok3o");
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Header_component_Qw9nV3mG0KQ",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "Qw9nV3mG0KQ",
  "canonicalFilename": "test.tsx_test.tsx_Header_component_Qw9nV3mG0KQ",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    82,
    247
  ]
}
*/
== DIAGNOSTICS ==

[]
