optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_9.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
const Header = $((decl1, {decl2}, [decl3]) => {
	const {decl4, key: decl5} = this;
	let [decl6, ...decl7] = stuff;
	const decl8 = 1, decl9;
	function decl10(decl11, {decl12}, [decl13]) {}
	class decl14 {
		method(decl15, {decl16}, [decl17]) {}
	}
	try{}catch(decl18){}
	try{}catch({decl19}){}
});

============================= test.tsx ==

import { qrl } from "@qwik.dev/core";
const i_QrzcmFeRo0o = ()=>import("./test.tsx_Header_QrzcmFeRo0o");
/*#__PURE__*/ qrl(i_QrzcmFeRo0o, "Header_QrzcmFeRo0o");


None
============================= test.tsx_Header_QrzcmFeRo0o.tsx (ENTRY POINT)==

export const Header_QrzcmFeRo0o = (decl1, { decl2 }, [decl3])=>{
	const { decl4, key: decl5 } = this;
	let [decl6, ...decl7] = stuff;
	const decl8 = 1, decl9;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Header_QrzcmFeRo0o",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "QrzcmFeRo0o",
  "canonicalFilename": "test.tsx_Header_QrzcmFeRo0o",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    65,
    342
  ]
}
*/
== DIAGNOSTICS ==

[]
