optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_build_server.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, isDev, isServer as isServer2 } from '@qwik.dev/core';
import { isServer, isBrowser as isb } from '@qwik.dev/core/build';
import { mongodb } from 'mondodb';
import { threejs } from 'threejs';

import L from 'leaflet';

export const functionThatNeedsWindow = () => {
  if (isb) {
    console.log('l', L);
    console.log('hey');
    window.alert('hey');
  }
};

export const App = component$(() => {
	useMount$(() => {
		if (isServer) {
			console.log('server', mongodb());
		}
		if (isb) {
			console.log('browser', new threejs());
		}
	});
	return (
		<Cmp>
			{isServer2 && <p>server</p>}
			{isb && <p>server</p>}
		</Cmp>
	);
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
import L from "leaflet";
const i_Va41bXgPqeU = ()=>import("./test.tsx_App_component_useMount_Va41bXgPqeU");
const i_XumqEURaLxI = ()=>import("./test.tsx_App_component_XumqEURaLxI");
export const functionThatNeedsWindow = ()=>{
	if (false) {
		console.log("l", L);
		console.log("hey");
		window.alert("hey");
	}
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "s_XumqEURaLxI"));


None
============================= test.tsx_App_component_XumqEURaLxI.tsx (ENTRY POINT)==

import { qrl, useMountQrl, isServer as isServer2 } from "@qwik.dev/core";
import { isBrowser as isb } from "@qwik.dev/core/build";
export const s_XumqEURaLxI = ()=>{
	/*#__PURE__*/ useMountQrl(/*#__PURE__*/ qrl(i_Va41bXgPqeU, "s_Va41bXgPqeU"));
	return <Cmp>
			{isServer2 && <p>server</p>}
			{isb && <p>server</p>}
		</Cmp>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    421,
    661
  ]
}
*/
============================= test.tsx_App_component_useMount_Va41bXgPqeU.tsx (ENTRY POINT)==

import { mongodb } from "mondodb";
import { threejs } from "threejs";
export const s_Va41bXgPqeU = ()=>{
	if (true) {
		console.log("server", mongodb());
	}
	if (false) {
		console.log("browser", new threejs());
	}
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_Va41bXgPqeU",
  "entry": null,
  "displayName": "test.tsx_App_component_useMount",
  "hash": "Va41bXgPqeU",
  "canonicalFilename": "test.tsx_App_component_useMount_Va41bXgPqeU",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useMount$",
  "captures": false,
  "loc": [
    440,
    568
  ]
}
*/
== DIAGNOSTICS ==

[]
