optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_capture_imports.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStyles$ } from '@qwik.dev/core';
import css1 from './global.css';
import css2 from './style.css';
import css3 from './style.css';

export const App = component$(() => {
	useStyles$(`${css1}${css2}`);
	useStyles$(css3);
})

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_GZvaNEi0pm0 = ()=>import("./test.tsx_App_component_useStyles_GZvaNEi0pm0");
const i_rJW7Bt5Pmn8 = ()=>import("./test.tsx_App_component_useStyles_1_rJW7Bt5Pmn8");
const i_XumqEURaLxI = ()=>import("./test.tsx_App_component_XumqEURaLxI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));


None
============================= test.tsx_App_component_XumqEURaLxI.js (ENTRY POINT)==

import { qrl, useStylesQrl } from "@qwik.dev/core";
export const App_component_XumqEURaLxI = ()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_GZvaNEi0pm0, "App_component_useStyles_GZvaNEi0pm0"));
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_rJW7Bt5Pmn8, "App_component_useStyles_1_rJW7Bt5Pmn8"));
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    185,
    244
  ]
}
*/
============================= test.tsx_App_component_useStyles_GZvaNEi0pm0.js (ENTRY POINT)==

import css1 from "./global.css";
import css2 from "./style.css";
export const App_component_useStyles_GZvaNEi0pm0 = `${css1}${css2}`;


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_GZvaNEi0pm0",
  "entry": null,
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "GZvaNEi0pm0",
  "canonicalFilename": "test.tsx_App_component_useStyles_GZvaNEi0pm0",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    205,
    221
  ]
}
*/
============================= test.tsx_App_component_useStyles_1_rJW7Bt5Pmn8.js (ENTRY POINT)==

import css3 from "./style.css";
export const App_component_useStyles_1_rJW7Bt5Pmn8 = css3;


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_1_rJW7Bt5Pmn8",
  "entry": null,
  "displayName": "test.tsx_App_component_useStyles_1",
  "hash": "rJW7Bt5Pmn8",
  "canonicalFilename": "test.tsx_App_component_useStyles_1_rJW7Bt5Pmn8",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    236,
    240
  ]
}
*/
== DIAGNOSTICS ==

[]
