optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_capturing_fn_class.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const App = component$(() => {
	function hola() {
		console.log('hola');
	}
	class Thing {}
	class Other {}

	return $(() => {
		hola();
		new Thing();
		return (
			<div></div>
		)
	});
})

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_zT40dUYPQNs = ()=>import("./test.tsx_test.tsx_App_component_1_zT40dUYPQNs");
const i_XumqEURaLxI = ()=>import("./test.tsx_test.tsx_App_component_XumqEURaLxI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "test.tsx_App_component_XumqEURaLxI"));


None
============================= test.tsx_test.tsx_App_component_XumqEURaLxI.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const test.tsx_App_component_XumqEURaLxI = ()=>{
	return /*#__PURE__*/ qrl(i_zT40dUYPQNs, "test.tsx_App_component_1_zT40dUYPQNs");
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    244
  ]
}
*/
============================= test.tsx_test.tsx_App_component_1_zT40dUYPQNs.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const test.tsx_App_component_1_zT40dUYPQNs = ()=>{
	hola();
	new Thing();
	return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_App_component_1_zT40dUYPQNs",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "zT40dUYPQNs",
  "canonicalFilename": "test.tsx_test.tsx_App_component_1_zT40dUYPQNs",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    175,
    240
  ]
}
*/
== DIAGNOSTICS ==

[
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'hola' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  },
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'Thing' can not be used inside a Qrl($) scope because it's a class",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  }
]
