optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_class_name.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const App2 = component$(() => {
	const signal = useSignal();
	const computed = signal.value + 'foo';
	return (
		<>
			<div className="hola"></div>
			<div className={signal.value}></div>
			<div className={signal}></div>
			<div className={computed}></div>

			<Foo className="hola"></Foo>
			<Foo className={signal.value}></Foo>
			<Foo className={signal}></Foo>
			<Foo className={computed}></Foo>
		</>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_SxkiFEcj0nk = ()=>import("./test.tsx_test.tsx_App2_component_SxkiFEcj0nk");
export const App2 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_SxkiFEcj0nk, "test.tsx_App2_component_SxkiFEcj0nk"));


None
============================= test.tsx_test.tsx_App2_component_SxkiFEcj0nk.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const test.tsx_App2_component_SxkiFEcj0nk = ()=>{
	const signal = useSignal();
	const computed = signal.value + "foo";
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("div", null, { className: "hola" }, null, 3, null),
		/*#__PURE__*/ _jsxSorted("div", { className: _wrapProp(signal) }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, { className: signal }, null, 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, { className: computed }, null, 3, null),
		_jsxSorted(Foo, null, { className: "hola" }, null, 3, null),
		_jsxSorted(Foo, { className: _wrapProp(signal) }, null, null, 3, null),
		_jsxSorted(Foo, null, { className: signal }, null, 3, null),
		_jsxSorted(Foo, null, { className: computed }, null, 3, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_App2_component_SxkiFEcj0nk",
  "entry": null,
  "displayName": "test.tsx_App2_component",
  "hash": "SxkiFEcj0nk",
  "canonicalFilename": "test.tsx_test.tsx_App2_component_SxkiFEcj0nk",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    77,
    465
  ]
}
*/
== DIAGNOSTICS ==

[]
