optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_custom_inlined_functions.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $, useStore, wrap, useEffect } from '@qwik.dev/core';

export const useMemoQrl = (qrt) => {
	useEffect(qrt);
};

export const useMemo$ = wrap(useMemoQrl);

export const App = component$((props) => {
	const state = useStore({count: 0});
	useMemo$(() => {
		console.log(state.count);
	});
	return $(() => (
		<div>{state.count}</div>
	));
});

export const Lightweight = (props) => {
	useMemo$(() => {
		console.log(state.count);
	});
};

============================= test.js ==

import { useMemoQrl } from "./test";
import { componentQrl, qrl, useEffect, useMemoQrl, wrap } from "@qwik.dev/core";
const i_6Sc9KVki3Y0 = ()=>import("./test.tsx_App_component_useMemo_6Sc9KVki3Y0");
const i_w0t0o3QMovU = ()=>import("./test.tsx_App_component_1_w0t0o3QMovU");
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
const i_UIcxVTQF1a8 = ()=>import("./test.tsx_Lightweight_useMemo_UIcxVTQF1a8");
export const useMemoQrl = (qrt)=>{
	useEffect(qrt);
};
export const useMemo$ = wrap(useMemoQrl);
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));
export const Lightweight = /*#__PURE__*/ useMemoQrl(/*#__PURE__*/ qrl(i_UIcxVTQF1a8, "Lightweight_useMemo_UIcxVTQF1a8"));


None
============================= test.tsx_App_component_useMemo_6Sc9KVki3Y0.js (ENTRY POINT)==

export const App_component_useMemo_6Sc9KVki3Y0 = ()=>{
	const [state] = useLexicalScope();
	console.log(state.count);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_useMemo_6Sc9KVki3Y0",
  "entry": null,
  "displayName": "test.tsx_App_component_useMemo",
  "hash": "6Sc9KVki3Y0",
  "canonicalFilename": "test.tsx_App_component_useMemo_6Sc9KVki3Y0",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useMemo$",
  "captures": true,
  "loc": [
    267,
    305
  ]
}
*/
============================= test.tsx_Lightweight_useMemo_UIcxVTQF1a8.js (ENTRY POINT)==

export const Lightweight_useMemo_UIcxVTQF1a8 = ()=>{
	console.log(state.count);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Lightweight_useMemo_UIcxVTQF1a8",
  "entry": null,
  "displayName": "test.tsx_Lightweight_useMemo",
  "hash": "UIcxVTQF1a8",
  "canonicalFilename": "test.tsx_Lightweight_useMemo_UIcxVTQF1a8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "useMemo$",
  "captures": false,
  "loc": [
    413,
    451
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { qrl, useMemoQrl, useStore } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = (props)=>{
	const state = useStore({ count: 0 });
	/*#__PURE__*/ useMemoQrl(/*#__PURE__*/ qrl(i_6Sc9KVki3Y0, "App_component_useMemo_6Sc9KVki3Y0", [state]));
	return /*#__PURE__*/ qrl(i_w0t0o3QMovU, "App_component_1_w0t0o3QMovU", [state]);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    207,
    359
  ]
}
*/
============================= test.tsx_App_component_1_w0t0o3QMovU.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const App_component_1_w0t0o3QMovU = ()=>{
	const [state] = useLexicalScope();
	return /*#__PURE__*/ _jsxSorted("div", null, null, state.count, 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "test.tsx_App_component_1_w0t0o3QMovU",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    318,
    355
  ]
}
*/
== DIAGNOSTICS ==

[]
