optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_dead_code.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
import { deps } from 'deps';

export const Foo = component$(({foo}) => {
	useMount$(() => {
		if (false) {
			deps();
		}
	});
	return (
		<div />
	);
})

============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

import { useMountQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
export const Foo_component_HTDRsvUbLiE = ({ foo })=>{
	/*#__PURE__*/ useMountQrl(/*#__PURE__*/ qrl(i_aaEQlcpxVis, "Foo_component_useMount_aaEQlcpxVis"));
	return <div />;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    105,
    197
  ]
}
*/
============================= test.tsx_Foo_component_useMount_aaEQlcpxVis.tsx (ENTRY POINT)==

import { deps } from "deps";
export const Foo_component_useMount_aaEQlcpxVis = ()=>{
	if (false) {
		deps();
	}
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_useMount_aaEQlcpxVis",
  "entry": null,
  "displayName": "test.tsx_Foo_component_useMount",
  "hash": "aaEQlcpxVis",
  "canonicalFilename": "test.tsx_Foo_component_useMount_aaEQlcpxVis",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useMount$",
  "captures": false,
  "loc": [
    129,
    169
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_aaEQlcpxVis = ()=>import("./test.tsx_Foo_component_useMount_aaEQlcpxVis");
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


None
== DIAGNOSTICS ==

[]
